# MIND

./: .cursorrules  .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  .gitmodules  .windsurfrules  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.docs  Dockerfile.docs.dev  Dockerfile.worker  PLANS.md  README.md  alembic.ini  compose.dev.yaml  compose.docs.yaml  compose.prod.yaml  compose.yaml  mind.toml  mind.toml.example  mind.toml.template  mind_memory_notes.md  mindt.toml.example  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.ai/: ARCHITECTURE.md  CHANGE_PROTOCOL.md  CONSTITUTION.md  CONVENTIONS.md  CURRENT_STATE.md  README.md  project.md
.ai/archive/: README.md
.ai/changes/: README.md
.ai/checklists/: bug-fix.md  new-endpoint.md  new-primitive.md  new-service.md  refactor.md
.ai/health/: baseline-report.json  drift-log.md
.ai/rules/: api.md  app-core.md  app-services.md  docs.md  domain-services.md  kernel.md  migration.md  primitives.md  telemetry.md  testing.md  transport.md
.ai/specs/: README.md
.ai/templates/: PLANS.md  design.md  project.md  proposal.md  spec.md  tasks.md
.ai/verification/: README.md  policy.md
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ai-governance.yml  docs-pages.yml  product-readiness.yml
.human/: README.md  artifacts.md  context.md  quick-start.md  templates.md  verification.md  workflow.md  工作流程.md  工具链.md  注意事项.md  自纠机制.md  规则维护.md  角色转变.md
Doc/: mem0源码分析.md  核心问题.md  规划文档.md
Doc/core/: MVP定义.md  STL提取模型评测报告.md  架构设计.md  评测方案.md  语义翻译层.md  项目定位.md
Jupyter/: Iterate_add_extract_facts.ipynb  JupyterBase.py  WorkFlowTest.ipynb  messages.txt
alembic/: env.py
alembic/versions/: 20260309_0001_initial_postgres_schema.py  20260309_0002_retrieval_indexes.py  20260309_0003_pgvector_retrieval.py  20260309_0004_offline_jobs.py  20260310_0005_provenance_ledger.py  20260310_0006_governance_audit.py  20260310_0007_concealed_objects.py  20260310_0008_user_state_tables.py  20260312_0009_offline_job_provider_selection.py  20260313_0010_feedback_record.py
artifacts/phase_g/: gate_report.json
artifacts/phase_h/: gate_report.json
artifacts/phase_i/: gate_report.json
artifacts/phase_j/: gate_report.json
artifacts/phase_kl/: audit_report_phase_kl.md
artifacts/phase_m/: audit_report_phase_m.md  gate_report.json
artifacts/public_datasets/: compare_10x_full.json  compare_10x_summary.txt  hotpotqa_llm.json  hotpotqa_stub.json  locomo_llm.json  locomo_stub.json  scifact_evaluation_report.json  scifact_full_report.json  scifact_llm.json  scifact_stub.json
docker/: nginx.conf  rest.Dockerfile  web.Dockerfile
docs/: README.md  docs-authoring.md  history-and-evidence.md  index.md
docs/architecture/: app-layer.md  capability-layer.md  capability-surface-matrix.md  documentation-system.md  frontend-experience.md  storage-model.md  system-overview.md  transport-model.md
docs/design/: design_breakdown.md  phase_c_startup_checklist.md  phase_e_startup_checklist.md  phase_f_startup_checklist.md  phase_g_startup_checklist.md  phase_h_startup_checklist.md  phase_i_startup_checklist.md  phase_j_startup_checklist.md  phase_k_startup_checklist.md  phase_l_startup_checklist.md  phase_m_startup_checklist.md  phase_n_startup_checklist.md  phase_o_startup_checklist.md  productization_program.md
docs/evolution/: eval_framework.md
docs/foundation/: implementation_stack.md  phase_gates.md  spec.md
docs/ops/: dev-environment.md  runbook-deploy.md  runbook-docs-release.md  runbook-troubleshooting.md  runbook-upgrade.md  security.md
docs/plans/: mind-growth-architecture-plan.md  mind-growth-counter-proposal.md  mind-growth-implementation-plan.md
docs/product/: api.md  cli.md  deployment.md  mcp.md  overview.md  quickstart.md  sessions-and-users.md
docs/reference/: api-reference.md  cli-reference.md  (+3 more)
frontend/: README.md  api.js  app.js  index.html  package-lock.json  package.json  styles.css
mind/: __init__.py  cli.py  cli_config.py  cli_demo_cmds.py  cli_gate.py  cli_gate_audits.py  cli_gates.py  cli_ops_cmds.py  cli_output.py  cli_phase_gates.py  cli_primitive_cmds.py  devcli.py  memory.py  offline_jobs.py  ops_logger.py  product_cli.py  prompts.py  runtime_logging.py  storage.py  utils.py
scripts/: _compare_answers.py  ai_health_check.py  ai_health_progress.py  compile_public_dataset_slice.py  deploy.sh  dev.sh  docs-release.sh  entrypoint-api.sh  product-readiness-artifacts.sh  run_growth_eval.py  run_memory_lifecycle_benchmark.py  run_offline_worker_once.py  run_phase_b_gate.py  run_phase_c_gate.py  run_phase_d_smoke.py  run_phase_e_gate.py  run_phase_e_startup.py  run_phase_f_baselines.py  run_phase_f_comparison.py  run_phase_f_gate.py  run_phase_f_manifest.py  run_phase_f_report.py  run_phase_g_cost_report.py  run_phase_g_gate.py  run_phase_g_strategy_dev.py  run_phase_h_gate.py  run_phase_i_gate.py  run_phase_j_gate.py  run_postgres_regression.py  run_public_dataset_eval.py
tests/: _access_benchmark_support.py  _long_horizon_eval_support.py  _phase_i_gate_support.py  conftest.py  test_access_benchmark.py  test_access_benchmark_balanced.py  test_access_benchmark_high_correctness_reconstruct.py  test_access_benchmark_high_correctness_reflective.py  test_access_benchmark_speed.py  test_access_contracts.py  test_access_service.py  test_ai_health_check.py  test_application_service.py  test_artifact_memory.py  test_auto_archive.py  test_auto_mode_enhanced.py  test_batch_config.py  test_cases_messages.py  test_cli_config.py  test_concealment_offline.py  test_concealment_online.py  test_config_file.py  test_conflict_detection.py  test_decision_prompt_opt.py  test_dense_retrieval.py  test_docs_solution.py  test_eval_baselines.py  test_eval_costing.py  test_eval_dataset.py  test_eval_extraction.py  test_eval_owner_centered_add.py  test_eval_reporting.py  test_eval_runner.py  test_eval_stage_owner_add.py  test_eval_stage_stl_extract.py  test_eval_strategy.py  test_eval_strategy_benchmark_chunks.py  test_extraction.py  test_fake_llm.py  test_feedback_loop.py  (+118 more)
(+568 files in other folders)
