[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mind"
version = "0.1.0"
description = "Phase B/C baseline for the MIND memory system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "pydantic>=2.12,<3",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0.40,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18,<2",
    "pytest>=9,<10",
    "ruff>=0.11,<0.12",
]

[project.scripts]
mind-phase-b-gate = "mind.cli:phase_b_gate_main"
mind-phase-c-gate = "mind.cli:phase_c_gate_main"
mind-phase-d-smoke = "mind.cli:phase_d_smoke_main"
mind-phase-e-startup = "mind.cli:phase_e_startup_main"
mind-phase-e-gate = "mind.cli:phase_e_gate_main"
mind-phase-f-manifest = "mind.cli:phase_f_manifest_main"
mind-phase-f-baselines = "mind.cli:phase_f_baselines_main"
mind-phase-f-report = "mind.cli:phase_f_report_main"
mind-phase-f-comparison = "mind.cli:phase_f_comparison_main"
mind-phase-f-gate = "mind.cli:phase_f_gate_main"
mind-phase-g-cost-report = "mind.cli:phase_g_cost_report_main"
mind-phase-g-strategy-dev = "mind.cli:phase_g_strategy_dev_main"
mind-phase-g-gate = "mind.cli:phase_g_gate_main"
mind-postgres-regression = "mind.cli:postgres_regression_main"
mind-offline-worker-once = "mind.cli:offline_worker_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["mind", "tests", "scripts"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.setuptools.packages.find]
include = ["mind*"]
