[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mind"
version = "0.2.0"
description = "Productized MIND memory system with dev, API, MCP, and CLI surfaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "pydantic>=2.12,<3",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0.40,<3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "mkdocstrings[python]>=0.28,<1",
    "mike>=2.1,<3",
]
dev = [
    "mypy>=1.18,<2",
    "pytest>=9,<10",
    "ruff>=0.11,<0.12",
]
mcp = [
    "mcp>=1.0,<2",
]

[project.scripts]
mind = "mind.product_cli:product_main"
# Primary dev CLI (renamed from 'mind')
mindtest = "mind.cli:mind_main"
mindtest-phase-b-gate = "mind.cli:kernel_gate_main"
mindtest-phase-c-gate = "mind.cli:primitive_gate_main"
mindtest-phase-d-smoke = "mind.cli:workspace_smoke_main"
mindtest-phase-e-startup = "mind.cli:offline_startup_main"
mindtest-phase-e-gate = "mind.cli:offline_gate_main"
mindtest-phase-f-manifest = "mind.cli:benchmark_manifest_main"
mindtest-phase-f-baselines = "mind.cli:benchmark_baselines_main"
mindtest-phase-f-report = "mind.cli:benchmark_report_main"
mindtest-phase-f-comparison = "mind.cli:benchmark_comparison_main"
mindtest-phase-f-gate = "mind.cli:benchmark_gate_main"
mindtest-phase-g-cost-report = "mind.cli:strategy_cost_report_main"
mindtest-phase-g-strategy-dev = "mind.cli:strategy_dev_main"
mindtest-phase-g-gate = "mind.cli:strategy_gate_main"
mindtest-phase-h-gate = "mind.cli:governance_gate_main"
mindtest-phase-i-gate = "mind.cli:access_gate_main"
mindtest-phase-j-gate = "mind.cli:cli_gate_main"
mindtest-phase-k-gate = "mind.cli:capability_gate_main"
mindtest-phase-k-compatibility-report = "mind.cli:capability_compatibility_report_main"
mindtest-phase-m-gate = "mind.cli:frontend_gate_main"
mindtest-postgres-regression = "mind.cli:postgres_regression_main"
mindtest-offline-worker-once = "mind.cli:offline_worker_main"
mind-api = "mind.api.app:run_server"
mind-mcp = "mind.mcp.server:run_mcp"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["mind", "tests", "scripts"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.setuptools.packages.find]
include = ["mind*"]
